Fix JDK libs eg freetype
lost during jre split

Signed-off-by: Pris Nasrat <pris.nasrat@chainguard.dev>

--- a/openjdk-11.yaml
+++ b/openjdk-11.yaml
@@ -1,13 +1,24 @@
 package:
   name: openjdk-11
   version: 11.0.25 # TODO(jason): on version bump, ensure to update downstream projects that are pinned to a specific prerelease version. See: https://github.com/wolfi-dev/os/pull/7958
-  epoch: 4
+  epoch: 5
   description:
   copyright:
     - license: GPL-2.0-only
   dependencies:
     runtime:
+      - alsa-lib
+      - freetype
+      - giflib
       - java-cacerts
+      - libfontconfig1
+      - libjpeg-turbo
+      - libx11
+      - libxext
+      - libxi
+      - libxrender
+      - libxtst
+      - ttf-dejavu
       - zlib
 
 environment:
