--- a/openjdk-22.yaml
+++ b/openjdk-22.yaml
@@ -1,13 +1,24 @@
 package:
   name: openjdk-22
   version: 22.0.2
-  epoch: 3
+  epoch: 4
   description: OpenJDK 22
   copyright:
     - license: GPL-2.0-or-later
   dependencies:
     runtime:
+      - alsa-lib
+      - freetype
+      - giflib
       - java-cacerts
+      - libfontconfig1
+      - libjpeg-turbo
+      - libx11
+      - libxext
+      - libxi
+      - libxrender
+      - libxtst
+      - ttf-dejavu
       - zlib
 
 environment:
