--- a/openjdk-21.yaml
+++ b/openjdk-21.yaml
@@ -1,13 +1,24 @@
 package:
   name: openjdk-21
   version: 21.0.5
-  epoch: 3
+  epoch: 5
   description:
   copyright:
     - license: GPL-2.0-or-later
   dependencies:
     runtime:
+      - alsa-lib
+      - freetype
+      - giflib
       - java-cacerts
+      - libfontconfig1
+      - libjpeg-turbo
+      - libx11
+      - libxext
+      - libxi
+      - libxrender
+      - libxtst
+      - ttf-dejavu
       - zlib
 
 environment:
