usrmerge: drop sql_exporter compat package

--- a/sql_exporter.yaml
+++ b/sql_exporter.yaml
@@ -5,6 +5,11 @@ package:
   description: Database-agnostic SQL Exporter for Prometheus
   copyright:
     - license: Apache-2.0
+  dependencies:
+    # This needs to be removed after usrmerge is complete and images
+    # are updated to not depend on compat packages.
+    provides:
+      - sql_exporter-compat=${{package.full-version}}
 
 pipeline:
   - uses: git-checkout
@@ -23,14 +28,6 @@ pipeline:
         -X github.com/prometheus/common/version.BuildUser=$(whoami)@$HOSTNAME
         -X github.com/prometheus/common/version.BuildDate=$(date -u -d "@${SOURCE_DATE_EPOCH:-$(date +%s)}" "+%Y-%m-%dT%H:%M:%SZ")
       output: sql_exporter
-
-subpackages:
-  - name: ${{package.name}}-compat
-    description: "upstream image have executable placed at /bin"
-    pipeline:
-      - runs: |
-          mkdir -p "${{targets.contextdir}}"/bin
-          ln -sf /usr/bin/sql_exporter "${{targets.contextdir}}"/bin/sql_exporter
 
 update:
   enabled: true
