Fix JDK libs eg freetype (#43098)
lost during jre split

Signed-off-by: Pris Nasrat <pris.nasrat@chainguard.dev>

Signed-off-by: Pris Nasrat <pris.nasrat@chainguard.dev>

--- a/openjdk-17.yaml
+++ b/openjdk-17.yaml
@@ -1,13 +1,24 @@
 package:
   name: openjdk-17
   version: "17.0.14" # TODO(jason): on version bump ensure to update downstream projects that are pinned to a specific prerelease version, i.e. https://github.com/chainguard-images/images/tree/main/images
-  epoch: 0
+  epoch: 1
   description:
   copyright:
     - license: GPL-2.0-only
   dependencies:
     runtime:
+      - alsa-lib
+      - freetype
+      - giflib
       - java-cacerts
+      - libfontconfig1
+      - libjpeg-turbo
+      - libx11
+      - libxext
+      - libxi
+      - libxrender
+      - libxtst
+      - ttf-dejavu
       - zlib
 
 environment:
