--- a/openjdk-22.yaml
+++ b/openjdk-22.yaml
@@ -7,7 +7,18 @@ package:
     - license: GPL-2.0-or-later
   dependencies:
     runtime:
+      - alsa-lib
+      - freetype
+      - giflib
       - java-cacerts
+      - libfontconfig1
+      - libjpeg-turbo
+      - libx11
+      - libxext
+      - libxi
+      - libxrender
+      - libxtst
+      - ttf-dejavu
       - zlib
 
 environment:
