--- a/openjdk-23.yaml
+++ b/openjdk-23.yaml
@@ -1,13 +1,24 @@
 package:
   name: openjdk-23
   version: "23.0.2"
-  epoch: 0
+  epoch: 1
   description: OpenJDK 23
   copyright:
     - license: GPL-2.0-or-later
   dependencies:
     runtime:
+      - alsa-lib
+      - freetype
+      - giflib
       - java-cacerts
+      - libfontconfig1
+      - libjpeg-turbo
+      - libx11
+      - libxext
+      - libxi
+      - libxrender
+      - libxtst
+      - ttf-dejavu
       - zlib
 
 environment:
