logstash-filter-xml: install JDK in tests

--- a/logstash-filter-xml.yaml
+++ b/logstash-filter-xml.yaml
@@ -52,7 +52,7 @@ test:
     contents:
       packages:
         - logstash
-        - openjdk-17-default-jvm
+        - openjdk-17-default-jdk
   pipeline:
     - runs: |
         logstash-plugin install $(find / -type f -name "${{package.name}}-*.gem")
