usrmerge - remove secrets-store-csi-driver-provider-aws compat

--- a/secrets-store-csi-driver-provider-aws.yaml
+++ b/secrets-store-csi-driver-provider-aws.yaml
@@ -5,6 +5,12 @@ package:
   description: AWS Secrets Manager and AWS Systems Manager Parameter Store provider for the Secret Store CSI Driver.
   copyright:
     - license: Apache-2.0
+  dependencies:
+    # REMOVE_POST_USRMERGE
+    # This needs to be removed after usrmerge is complete and images
+    # are updated to not depend on compat packages.
+    provides:
+      - secrets-store-csi-driver-provider-aws-compat=${{package.full-version}}
 
 environment:
   contents:
@@ -38,15 +44,6 @@ pipeline:
       cp _output/secrets-store-csi-driver-provider-aws-* ${{targets.destdir}}/usr/bin/secrets-store-csi-driver-provider-aws
 
   - uses: strip
-
-subpackages:
-  # create a compat package where you create a smylink between /usr/bin and /bin
-  - name: ${{package.name}}-compat
-    description: Compatibility package for secrets-store-csi-driver-provider-aws
-    pipeline:
-      - runs: |
-          mkdir -p ${{targets.contextdir}}/bin/
-          ln -sf /usr/bin/secrets-store-csi-driver-provider-aws ${{targets.contextdir}}/bin/secrets-store-csi-driver-provider-aws
 
 update:
   enabled: true
