--- a/sql_exporter.yaml
+++ b/sql_exporter.yaml
@@ -6,6 +6,7 @@ package:
   copyright:
     - license: Apache-2.0
   dependencies:
+    # REMOVE_POST_USRMERGE
     # This needs to be removed after usrmerge is complete and images
     # are updated to not depend on compat packages.
     provides:
