--- a/ingress-nginx-controller-1.12.yaml
+++ b/ingress-nginx-controller-1.12.yaml
@@ -2,7 +2,7 @@
 package:
   name: ingress-nginx-controller-1.12
   version: 1.12.0
-  # There are manual changes to review between each package update. See 'vars:' section.
+  # There are manual changes to review between each package update. See 'vars:' section
   epoch: 9
   description: "Ingress-NGINX Controller for Kubernetes"
   copyright:
