usrmerge cloud-provider-aws-1.32 and clean-up comments

--- a/cloud-provider-aws-1.31.yaml
+++ b/cloud-provider-aws-1.31.yaml
@@ -28,6 +28,8 @@ subpackages:
     dependencies:
       provides:
         - cloud-provider-aws-cloud-controller-manager=${{package.full-version}}
+        # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+        - cloud-provider-aws-cloud-controller-manager-compat=${{package.full-version}}
     pipeline:
       - uses: go/build
         with:
@@ -60,16 +62,6 @@ subpackages:
         - runs: |
             ecr-credential-provider --help
             ecr-credential-provider --version
-
-  - name: "${{package.name}}-cloud-controller-manager-compat"
-    description: "Compatibility package to place binaries in the location expected by upstream Dockerfile"
-    dependencies:
-      provides:
-        - cloud-provider-aws-cloud-controller-manager-compat=${{package.full-version}}
-    pipeline:
-      - runs: |
-          mkdir -p "${{targets.contextdir}}/bin"
-          ln -sf /usr/bin/aws-cloud-controller-manager ${{targets.contextdir}}/bin/aws-cloud-controller-manager
 
 update:
   enabled: true
