--- a/secrets-store-csi-driver-provider-aws.yaml
+++ b/secrets-store-csi-driver-provider-aws.yaml
@@ -6,9 +6,7 @@ package:
   copyright:
     - license: Apache-2.0
   dependencies:
-    # REMOVE_POST_USRMERGE
-    # This needs to be removed after usrmerge is complete and images
-    # are updated to not depend on compat packages.
+    # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
     provides:
       - secrets-store-csi-driver-provider-aws-compat=${{package.full-version}}
 
