Fix(mlflow): pip install .[auth] for missing dependencies
Signed-off-by: Aditvil-Dev <aditya.tirmanwar@chainguard.dev>

--- a/mlflow.yaml
+++ b/mlflow.yaml
@@ -1,7 +1,7 @@
 package:
   name: mlflow
   version: "2.20.2"
-  epoch: 0
+  epoch: 1
   description: Open source platform for the machine learning lifecycle
   copyright:
     - license: Apache-2.0
@@ -54,7 +54,7 @@ pipeline:
       sed -i "s|gunicorn<22|gunicorn<23|g" pyproject.toml
 
       # Install mlflow
-      pip install .
+      pip install .[auth]
 
       # Install dependencies
       pip install -I packaging pyparsing setuptools --no-compile
