contour-1.30 - remove -compat for usrmerge

--- a/contour-1.30.yaml
+++ b/contour-1.30.yaml
@@ -8,6 +8,8 @@ package:
   dependencies:
     provides:
       - contour=${{package.full-version}}
+      # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+      - contour-compat=${{package.full-version}}
 
 var-transforms:
   - from: ${{package.version}}
@@ -42,16 +44,6 @@ pipeline:
         -X github.com/projectcontour/contour/internal/build.Branch=$(git rev-parse --abbrev-ref HEAD)
 
 subpackages:
-  - name: ${{package.name}}-compat
-    description: "compat package for contour as expected by envoy"
-    pipeline:
-      - runs: |
-          mkdir -p "${{targets.subpkgdir}}"/bin
-          ln -s /usr/bin/contour "${{targets.subpkgdir}}"/bin/contour
-    dependencies:
-      provides:
-        - contour-compat=${{package.full-version}}
-
   - name: ${{package.name}}-bitnami-compat
     description: "compat package with bitnami/contour image"
     dependencies:
