--- a/descheduler.yaml
+++ b/descheduler.yaml
@@ -5,6 +5,10 @@ package:
   description: Descheduler for Kubernetes
   copyright:
     - license: Apache-2.0
+  dependencies:
+    # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+    provides:
+      - descheduler-compat=${{package.full-version}}
 
 pipeline:
   - uses: git-checkout
@@ -27,14 +31,6 @@ pipeline:
         -X sigs.k8s.io/descheduler/pkg/version.buildDate=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
         -X sigs.k8s.io/descheduler/pkg/version.gitbranch=$(git rev-parse --abbrev-ref HEAD)
       output: descheduler
-
-subpackages:
-  - name: ${{package.name}}-compat
-    description: "Compatibility package to place binaries in the location expected by upstream helm charts"
-    pipeline:
-      - runs: |
-          mkdir -p ${{targets.contextdir}}/bin/
-          ln -sf /usr/bin/descheduler ${{targets.contextdir}}/bin/descheduler
 
 update:
   enabled: true
