envoy-ratelimit - remove -compat for usrmerge

--- a/envoy-ratelimit.yaml
+++ b/envoy-ratelimit.yaml
@@ -7,6 +7,10 @@ package:
   description: Go/gRPC service designed to enable generic rate limit scenarios from different types of applications.
   copyright:
     - license: Apache-2.0
+  dependencies:
+    # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+    provides:
+      - envoy-ratelimit-compat=${{package.full-version}}
 
 environment:
   contents:
@@ -53,15 +57,6 @@ test:
         if ! pgrep ratelimit; then
           echo "Ratelimit service failed to start" && exit 1
         fi
-
-subpackages:
-  - name: envoy-ratelimit-compat
-    pipeline:
-      - runs: |
-          # The helm chart expects the ratelimit binary to be in /bin instead of /usr/bin
-          mkdir -p "${{targets.subpkgdir}}"/bin
-          ln -sf /usr/bin/ratelimit ${{targets.subpkgdir}}/bin/ratelimit
-    description: Compatibility package to place binaries in the location expected by upstream helm charts
 
 update:
   enabled: true
