clilium-1.16: fixup sbin path

--- a/cilium-1.17.yaml
+++ b/cilium-1.17.yaml
@@ -131,7 +131,7 @@ subpackages:
           # This script generates a wrapper based on the version
           # of iptables provided by the build environment.
           ./images/runtime/iptables-wrapper-installer.sh
-          mkdir -p ${{targets.subpkgdir}}/sbin
+          mkdir -p ${{targets.subpkgdir}}/usr/bin
           mv /sbin/iptables-wrapper ${{targets.subpkgdir}}/usr/bin/iptables-wrapper
       - uses: strip
 
