gitlab-cng-17.8 - remove -compat for usrmerge

--- a/gitlab-cng-17.8.yaml
+++ b/gitlab-cng-17.8.yaml
@@ -40,6 +40,8 @@ package:
     provides:
       - gitlab-cng=${{package.full-version}}
       - gitlab=${{package.full-version}}
+      # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+      - gitlab-container-registry-compat=${{package.full-version}}
 
 environment:
   contents:
@@ -294,16 +296,6 @@ subpackages:
 
             # Stop the registry
             kill $PID
-
-  - name: gitlab-container-registry-compat-${{vars.major-minor-version}}
-    dependencies:
-      provides:
-        - gitlab-container-registry-compat=${{package.full-version}}
-    pipeline:
-      - runs: |
-          # https://gitlab.com/gitlab-org/build/CNG/-/blob/master/gitlab-container-registry/scripts/process-wrapper?ref_type=heads#L3
-          mkdir -p "${{targets.contextdir}}"/bin
-          ln -sf /usr/bin/registry "${{targets.contextdir}}"/bin/registry
 
   - name: gitlab-elasticsearch-indexer-${{vars.major-minor-version}}
     description: Elasticsearch indexer for GitLab EE, written in Go
