audit - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/audit.yaml
+++ b/audit.yaml
@@ -56,7 +56,7 @@ pipeline:
           --without-golang
           --with-io_uring
           --runstatedir=/var/run
-          --sbindir=/usr/sbin
+          --sbindir=/usr/bin
       "
 
       # Append architecture-specific flag if needed
