avahi - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/avahi.yaml
+++ b/avahi.yaml
@@ -51,6 +51,7 @@ pipeline:
     with:
       opts: |
         --prefix=/usr \
+        --sbindir=/bin \
         --localstatedir=/var \
         --with-distro=none \
         --disable-qt3 \
