utmp-docs: Fix tests

--- a/utmps.yaml
+++ b/utmps.yaml
@@ -51,9 +51,6 @@ pipeline:
       install -D -m644 btmpd.logrotate "${{targets.destdir}}"/etc/logrotate.d/btmpd
       install -D -m755 setup-utmp "${{targets.destdir}}"/usr/bin/setup-utmp
 
-      mkdir -p "${{targets.destdir}}/usr/share/doc"
-      cp -a "$builddir/doc" "${{targets.destdir}}/usr/share/doc/${{package.name}}"
-
   - uses: strip
 
 subpackages:
@@ -67,8 +64,9 @@ subpackages:
 
   - name: utmps-docs
     pipeline:
-      - uses: split/infodir
-      - uses: split/manpages
+      - runs: |
+          mkdir -p "${{targets.subpkgdir}}/usr/share/doc/${{package.name}}"
+          cp -a doc "${{targets.subpkgdir}}/usr/share/doc/${{package.name}}"
     test:
       pipeline:
         - uses: test/docs
