apache2 - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/apache2.yaml
+++ b/apache2.yaml
@@ -57,7 +57,7 @@ pipeline:
         --with-suexec-caller=www-data \
         --with-suexec-docroot=/var/www \
         --with-suexec-logfile=/var/log/apache2/suexec.log \
-        --with-suexec-bin=/usr/sbin/suexec \
+        --with-suexec-bin=/usr/bin/suexec \
         --with-suexec-uidmin=99 \
         --with-suexec-gidmin=99 \
         --with-apr=/usr/bin/apr-1-config \
@@ -88,7 +88,8 @@ pipeline:
         --enable-exception-hook \
         --enable-dav \
         --enable-dav-fs \
-        --enable-dav-lock
+        --enable-dav-lock \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
@@ -131,13 +132,8 @@ subpackages:
           set -x
           # Move utilities to usr/bin
           mkdir -p "${{targets.subpkgdir}}"/usr/bin
-          for i in ab htdbm htdigest htpasswd httxt2dbm logresolve; do
+          for i in checkgid fcgistarter htcacheclean rotatelogs ab htdbm htdigest htpasswd httxt2dbm logresolve; do
             mv "${{targets.destdir}}"/usr/bin/$i "${{targets.subpkgdir}}"/usr/bin/
-          done
-          # Move utilities to usr/sbin
-          mkdir -p "${{targets.subpkgdir}}"/usr/sbin
-          for i in checkgid fcgistarter htcacheclean rotatelogs; do
-            mv "${{targets.destdir}}"/usr/sbin/$i "${{targets.subpkgdir}}"/usr/sbin/
           done
 
   - name: ${{package.name}}-data
