bind - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/bind.yaml
+++ b/bind.yaml
@@ -73,6 +73,7 @@ pipeline:
         --enable-largefile \
         --enable-linux-caps \
         --enable-shared \
+        --sbindir=/usr/bin \
         --disable-static \
 
   - uses: autoconf/make
@@ -211,16 +212,8 @@ subpackages:
           mkdir -p ${{targets.subpkgdir}}/usr/bin
           for i in ${{targets.destdir}}/usr/bin/*; do
             case "${i##*/}" in
-              named-checkconf) ;;
+              named-checkconf|named|rndc) ;;
               *) mv "$i" ${{targets.subpkgdir}}/usr/bin ;;
-            esac
-          done
-
-          mkdir -p ${{targets.subpkgdir}}/usr/sbin
-          for i in ${{targets.destdir}}/usr/sbin/*; do
-            case "${i##*/}" in
-              named|rndc) ;;
-              *) mv "$i" ${{targets.subpkgdir}}/usr/sbin ;;
             esac
           done
     description: The ISC DNS tools
