adding update config

--- a/pypy.yaml
+++ b/pypy.yaml
@@ -10,11 +10,13 @@ environment:
     packages:
       - autoconf
       - automake
+      - build-base
       - busybox
       - bzip2-dev
       - clang
       - expat-dev
-      - gcc-6
+      - gcc-12
+      - gcc-12-default
       - gdbm-dev
       - libffi
       - libffi-dev
@@ -82,3 +84,9 @@ pipeline:
       export LD_LIBRARY_PATH=/home/build/melange-out/pypy/usr/lib:$LD_LIBRARY_PATH
       /home/build/melange-out/pypy/usr/bin/python ../../rpython/bin/rpython --opt=jit --shared targetpypystandalone
       PYTHONPATH=../.. ./pypy-c ../../lib_pypy/pypy_tools/build_cffi_imports.py
+
+update:
+  enabled: true
+  github:
+    identifier: pypy/pypy
+    strip-prefix: release-pypy3.11-v
