grafana-rollout-operator

--- a/grafana-rollout-operator.yaml
+++ b/grafana-rollout-operator.yaml
@@ -5,6 +5,10 @@ package:
   description: Kubernetes Rollout Operator
   copyright:
     - license: Apache-2.0
+  dependencies:
+    # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+    provides:
+      - grafana-rollout-operator-compat=${{package.full-version}}
 
 pipeline:
   - uses: git-checkout
@@ -17,14 +21,6 @@ pipeline:
     with:
       packages: ./cmd/rollout-operator
       output: rollout-operator
-
-subpackages:
-  - name: ${{package.name}}-compat
-    description: "upstream image have executable placed at /bin"
-    pipeline:
-      - runs: |
-          mkdir -p ${{targets.contextdir}}/bin
-          ln -sf /usr/bin/rollout-operator ${{targets.contextdir}}/bin/rollout-operator
 
 test:
   pipeline:
