continue installing using pip install .
Signed-off-by: Aditvil-Dev <aditya.tirmanwar@chainguard.dev>

--- a/mlflow.yaml
+++ b/mlflow.yaml
@@ -54,6 +54,7 @@ pipeline:
       sed -i "s|gunicorn<22|gunicorn<23|g" pyproject.toml
 
       # Install mlflow
+      pip install .
       pip install .[auth]
 
       # Install dependencies
