--- a/grpc-health-probe.yaml
+++ b/grpc-health-probe.yaml
@@ -5,6 +5,10 @@ package:
   description: A command-line tool to perform health-checks for gRPC applications in Kubernetes and elsewhere
   copyright:
     - license: Apache-2.0
+  dependencies:
+    # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+    provides:
+      - grpc-health-probe-compat=${{package.full-version}}
 
 pipeline:
   - uses: git-checkout
@@ -25,17 +29,6 @@ pipeline:
       ldflags: -X main.versionTag=v${{package.version}}
 
   - uses: strip
-
-subpackages:
-  - name: ${{package.name}}-compat
-    pipeline:
-      - runs: |
-          # Symlink the binary from usr/bin to /bin
-          mkdir -p "${{targets.subpkgdir}}"/bin
-          ln -sf /usr/bin/grpc-health-probe ${{targets.subpkgdir}}/bin/grpc-health-probe
-    dependencies:
-      runtime:
-        - ${{package.name}}
 
 update:
   enabled: true
