chrony - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/chrony.yaml
+++ b/chrony.yaml
@@ -36,8 +36,9 @@ pipeline:
       	--chronyrundir=/run/chrony \
       	--disable-readline \
       	--with-user=chrony \
-      	--with-sendmail=/usr/sbin/sendmail \
-      	--enable-scfilter
+      	--with-sendmail=/usr/bin/sendmail \
+      	--enable-scfilter \
+        --sbindir=/usr/bin
       make all docs
 
   - runs: |
