bpftool - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/bpftool.yaml
+++ b/bpftool.yaml
@@ -34,6 +34,9 @@ pipeline:
       cd src
       make
       DESTDIR=${{targets.destdir}} prefix=/usr make install
+      mkdir -p ${{targets.destdir}}/usr/bin
+      mv ${{targets.destdir}}/usr/sbin/* ${{targets.destdir}}/usr/bin
+      rmdir ${{targets.destdir}}/usr/sbin
 
   - uses: strip
 
