clamav-1.4 - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/clamav-1.4.yaml
+++ b/clamav-1.4.yaml
@@ -66,6 +66,10 @@ pipeline:
 
   - uses: cmake/install
 
+  - runs: |
+      mv ${{targets.destdir}}/usr/sbin/* ${{targets.destdir}}/usr/bin/
+      rmdir ${{targets.destdir}}/usr/sbin/
+
   - uses: strip
 
   - runs: |
@@ -134,9 +138,8 @@ subpackages:
             "${{targets.subpkgdir}}"/var/lib/clamav
 
           mkdir -p "${{targets.subpkgdir}}"/usr/bin
-          mkdir -p "${{targets.subpkgdir}}"/usr/sbin
           mv "${{targets.destdir}}"/usr/bin/clamdtop "${{targets.subpkgdir}}"/usr/bin/
-          mv "${{targets.destdir}}"/usr/sbin/clamd "${{targets.subpkgdir}}"/usr/sbin/
+          mv "${{targets.destdir}}"/usr/bin/clamd "${{targets.subpkgdir}}"/usr/bin/
           mv "${{targets.destdir}}"/usr/bin/clamconf "${{targets.subpkgdir}}"/usr/bin/
 
           mv "${{targets.destdir}}"/etc/clamav/clamd.conf.sample "${{targets.subpkgdir}}"/etc/clamav/clamd.conf
@@ -237,8 +240,8 @@ subpackages:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/etc/clamav
 
-          mkdir -p "${{targets.subpkgdir}}"/usr/sbin
-          mv "${{targets.destdir}}"/usr/sbin/clamav-milter "${{targets.subpkgdir}}"/usr/sbin/
+          mkdir -p "${{targets.subpkgdir}}"/usr/bin
+          mv "${{targets.destdir}}"/usr/bin/clamav-milter "${{targets.subpkgdir}}"/usr/bin/
 
           mv "${{targets.destdir}}"/etc/clamav/clamav-milter.conf.sample \
             "${{targets.subpkgdir}}"/etc/clamav/clamav-milter.conf
