Add py3-roman-numerals-py, a missing dep of py3-sphinx
Fixes: #43085

Signed-off-by: dann frazier <dann.frazier@chainguard.dev>

--- a/py3-sphinx.yaml
+++ b/py3-sphinx.yaml
@@ -1,7 +1,7 @@
 package:
   name: py3-sphinx
   version: "8.2.0"
-  epoch: 0
+  epoch: 1
   description: Python Documentation Generator
   copyright:
     - license: MIT
@@ -48,6 +48,7 @@ subpackages:
         - py${{range.key}}-packaging
         - py${{range.key}}-pygments
         - py${{range.key}}-requests
+        - py${{range.key}}-roman-numerals-py
         - py${{range.key}}-snowballstemmer
         - py${{range.key}}-sphinxcontrib-applehelp
         - py${{range.key}}-sphinxcontrib-devhelp
@@ -72,6 +73,7 @@ subpackages:
             python: python${{range.key}}
             imports: |
               import ${{vars.import}}
+              from sphinx.writers.latex import LaTeXTranslator, LaTeXWriter
 
   - range: py-versions
     name: py${{range.key}}-${{vars.pypi-package}}-bin
