conntrack-tools - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/conntrack-tools.yaml
+++ b/conntrack-tools.yaml
@@ -40,6 +40,9 @@ pipeline:
       export LDFLAGS="$LDFLAGS $(pkgconf --libs libtirpc)"
 
   - uses: autoconf/configure
+    with:
+      opts: |
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
