collectd - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/collectd.yaml
+++ b/collectd.yaml
@@ -85,6 +85,7 @@ pipeline:
         --build=$CBUILD \
         --host=$CHOST \
         --prefix=/usr \
+        --sbindir=/usr/bin \
         --sysconfdir=/etc/collectd \
         --mandir=/usr/share/man \
         --infodir=/usr/share/info \
