e2gsprogs: update configure options

--- a/e2fsprogs.yaml
+++ b/e2fsprogs.yaml
@@ -37,7 +37,11 @@ pipeline:
         --disable-uuidd \
         --disable-libuuid \
         --disable-libblkid \
-        --disable-nls
+        --disable-nls \
+        --prefix='/usr' \
+        --with-root-prefix='' \
+        --sbindir="/usr/bin"
+        # --with-libdir='/usr/lib'
 
   - uses: autoconf/make
 
