--- a/linkerd2.yaml
+++ b/linkerd2.yaml
@@ -5,6 +5,10 @@ package:
   description: "meta linkerd package"
   copyright:
     - license: Apache-2.0
+  dependencies:
+    # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+    provides:
+      - linkerd2-policy-controller-compat=${{package.full-version}}
 
 environment:
   contents:
@@ -119,13 +123,6 @@ subpackages:
           runs: |
             # executable doesn't have help or version flag.
             stat /usr/bin/linkerd-policy-controller
-
-  - name: ${{package.name}}-policy-controller-compat
-    description: "upstream image have executable placed at /bin"
-    pipeline:
-      - runs: |
-          mkdir -p ${{targets.contextdir}}/bin/
-          ln -sf /usr/bin/linkerd-policy-controller ${{targets.contextdir}}/bin/linkerd-policy-controller
 
   - name: ${{package.name}}-metrics-api
     dependencies:
