--- a/aws-s3-controller.yaml
+++ b/aws-s3-controller.yaml
@@ -5,6 +5,10 @@ package:
   description: ACK service controller for Amazon Simple Storage Service (S3)
   copyright:
     - license: Apache-2.0
+  dependencies:
+    # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+    provides:
+      - aws-s3-controller-compat=${{package.full-version}}
 
 pipeline:
   - uses: git-checkout
@@ -26,17 +30,6 @@ pipeline:
       mkdir -p ${{targets.contextdir}}
       cp LICENSE ${{targets.contextdir}}/
       cp ATTRIBUTION.md ${{targets.contextdir}}/
-
-subpackages:
-  - name: ${{package.name}}-compat
-    description: "Compatibility package to place binaries in the location expected by aws-s3-controller"
-    pipeline:
-      - runs: |
-          mkdir -p ${{targets.contextdir}}/bin
-          ln -sf /usr/bin/controller ${{targets.contextdir}}/bin/controller
-    test:
-      pipeline:
-        - runs: "[ \"$(stat -c '%N' /bin/controller 2>/dev/null)\" = \"'/bin/controller' -> '/usr/bin/controller'\" ]"
 
 update:
   enabled: true
