secrets-store-csi-driver-provider-azure

--- a/secrets-store-csi-driver-provider-azure.yaml
+++ b/secrets-store-csi-driver-provider-azure.yaml
@@ -6,6 +6,9 @@ package:
   copyright:
     - license: MIT
   dependencies:
+    provides:
+      # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+      - secrets-store-csi-driver-provider-azure-compat=${{package.full-version}}
     runtime:
       - ca-certificates-bundle
       - tzdata
@@ -29,24 +32,6 @@ pipeline:
         -X github.com/Azure/secrets-store-csi-driver-provider-azure/pkg/version.BuildDate=$(date +%Y-%m-%d-%H:%M)
         -X github.com/Azure/secrets-store-csi-driver-provider-azure/pkg/pkg/version.Vcs=$(git rev-parse --short HEAD)
         -X github.com/Azure/secrets-store-csi-driver-provider-azure/pkg/version.BuildVersion=${{package.version}}
-
-subpackages:
-  - name: ${{package.name}}-compat
-    description: Compat package for ${{package.name}}
-    pipeline:
-      - runs: |
-          mkdir -p "${{targets.contextdir}}"/bin
-          ln -sf /usr/bin/${{package.name}} "${{targets.contextdir}}"/bin/${{package.name}}
-    test:
-      environment:
-        contents:
-          packages:
-            - ${{package.name}}
-      pipeline:
-        - runs: |
-            stat /bin/secrets-store-csi-driver-provider-azure
-            /bin/secrets-store-csi-driver-provider-azure --version | grep ${{package.version}}
-            /bin/secrets-store-csi-driver-provider-azure --help
 
 update:
   enabled: true
