velero-plugin-for-microsoft-azure

--- a/velero-plugin-for-microsoft-azure.yaml
+++ b/velero-plugin-for-microsoft-azure.yaml
@@ -30,14 +30,11 @@ subpackages:
     description: "Compatibility package to place binaries in the location expected by upstream Dockerfile"
     pipeline:
       - runs: |
-          # The Dockerfile expects the binaries to be in /bin instead of /usr/bin
-          # also the plugin binary is expected to be in /plugins directory
-          mkdir -p "${{targets.subpkgdir}}"/bin
+          # The plugin binary is expected to be in /plugins directory
           mkdir -p "${{targets.subpkgdir}}"/plugins
           # /target directory is created to match the Dockerfile
           mkdir -p "${{targets.subpkgdir}}"/target
           cp "${{targets.destdir}}"/usr/bin/velero-plugin-for-microsoft-azure "${{targets.subpkgdir}}"/plugins/velero-plugin-for-microsoft-azure
-          ln -sf /usr/bin/cp-plugin "${{targets.subpkgdir}}"/bin/cp-plugin
 
 update:
   enabled: true
@@ -52,7 +49,7 @@ test:
         - velero-plugin-for-microsoft-azure-compat
   pipeline:
     - runs: |
-        /bin/cp-plugin /plugins/velero-plugin-for-microsoft-azure /target/velero-plugin-for-microsoft-azure
+        cp-plugin /plugins/velero-plugin-for-microsoft-azure /target/velero-plugin-for-microsoft-azure
         # check the /target directory if there ivelero-plugin-for-microsoft-azure exist
         ls /target/velero-plugin-for-microsoft-azure
         set +e
