--- a/promxy.yaml
+++ b/promxy.yaml
@@ -6,6 +6,9 @@ package:
   copyright:
     - license: MIT
   dependencies:
+    provides:
+      # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+      - promxy-compat=${{package.full-version}}
     runtime:
       - ca-certificates-bundle
 
@@ -32,15 +35,6 @@ pipeline:
     with:
       packages: ./cmd/remote_write_exporter
       output: remote_write_exporter
-
-subpackages:
-  - name: promxy-compat
-    description: "Compatibility package to symlink binaries to match upstream deployment"
-    pipeline:
-      - runs: |
-          mkdir -p "${{targets.subpkgdir}}/bin"
-          ln -sf /usr/bin/promxy "${{targets.subpkgdir}}/bin/promxy"
-          ln -sf /usr/bin/remote_write_exporter "${{targets.subpkgdir}}/bin/remote_write_exporter"
 
 update:
   enabled: true
