prometheus-operator.yaml

--- a/prometheus-operator.yaml
+++ b/prometheus-operator.yaml
@@ -40,6 +40,10 @@ pipeline:
 subpackages:
   - name: prometheus-config-reloader
     description: Prometheus Operator creates/configures/manages Prometheus clusters atop Kubernetes
+    dependencies:
+      # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+      provides:
+        - prometheus-config-reloader-oci-entrypoint-compat=${{package.full-version}}
     pipeline:
       - uses: autoconf/make
         with:
@@ -48,14 +52,12 @@ subpackages:
           mkdir -p "${{targets.contextdir}}/usr/bin"
           mv ./prometheus-config-reloader "${{targets.contextdir}}/usr/bin"
 
-  - name: prometheus-config-reloader-oci-entrypoint-compat
-    pipeline:
-      - runs: |
-          mkdir -p "${{targets.contextdir}}/bin"
-          ln -s /usr/bin/prometheus-config-reloader "${{targets.contextdir}}/bin/prometheus-config-reloader"
-
   - name: prometheus-admission-webhook
     description: Prometheus Operator creates/configures/manages Prometheus clusters atop Kubernetes
+    dependencies:
+      provides:
+        # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+        - prometheus-admission-webhook-compat=${{package.full-version}}
     pipeline:
       - uses: autoconf/make
         with:
@@ -68,12 +70,6 @@ subpackages:
         - runs: |
             admission-webhook --version
             admission-webhook --help
-
-  - name: prometheus-admission-webhook-compat
-    pipeline:
-      - runs: |
-          mkdir -p "${{targets.contextdir}}/bin"
-          ln -s /usr/bin/admission-webhook "${{targets.contextdir}}/bin/admission-webhook"
 
 update:
   enabled: true
