mountpoint-s3-csi-driver

--- a/mountpoint-s3-csi-driver.yaml
+++ b/mountpoint-s3-csi-driver.yaml
@@ -3,6 +3,10 @@ package:
   version: "1.12.0"
   epoch: 1
   description: Built on Mountpoint for Amazon S3, the Mountpoint CSI driver presents an Amazon S3 bucket as a storage volume accessible by containers in your Kubernetes cluster
+  dependencies:
+    # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+    provides:
+      - mountpoint-s3-csi-driver-compat=${{package.full-version}}
   copyright:
     - license: Apache-2.0
 
@@ -30,15 +34,6 @@ pipeline:
         -X github.com/awslabs/aws-s3-csi-driver/pkg/driver/version.gitCommit=$(git rev-parse HEAD)
         -X github.com/awslabs/aws-s3-csi-driver/pkg/driver/version.buildDate=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
       output: install-mp
-
-subpackages:
-  - name: ${{package.name}}-compat
-    description: "Compatibility package to place binaries in the location expected by upstream helm charts"
-    pipeline:
-      - runs: |
-          mkdir -p ${{targets.contextdir}}/bin/
-          ln -sf /usr/bin/aws-s3-csi-driver ${{targets.contextdir}}/bin/aws-s3-csi-driver
-          ln -sf /usr/bin/install-mp ${{targets.contextdir}}/bin/install-mp
 
 update:
   enabled: true
