add font-noto-math and font-noto-symbols to font-noto's runtime deps
Signed-off-by: Batuhan Apaydin <batuhan.apaydin@chainguard.dev>

--- a/font-noto.yaml
+++ b/font-noto.yaml
@@ -1,10 +1,13 @@
 package:
   name: font-noto
   version: 2025.02.01
-  epoch: 0
+  epoch: 1
   description: Noto fonts
   dependencies:
     runtime:
+      - font-noto-common
+      - font-noto-math
+      - font-noto-symbols
       - fontconfig
   copyright:
     - license: Apache-2.0
