--- a/bind.yaml
+++ b/bind.yaml
@@ -1,6 +1,6 @@
 package:
   name: bind
-  version: "9.18.34"
+  version: "9.20.6"
   epoch: 0
   description: The ISC DNS server
   copyright:
@@ -18,6 +18,7 @@ environment:
       - dns-root-hints
       - dnssec-root
       - fstrm-dev
+      - json-c-dev
       - krb5-dev
       - libcap-dev
       - libprotoc
@@ -31,13 +32,25 @@ environment:
       - pkgconf-dev
       - protobuf-c-dev
       - protoc
+      - userspace-rcu
+      - userspace-rcu-dev
 
 pipeline:
   - uses: git-checkout
     with:
       repository: https://gitlab.isc.org/isc-projects/bind9.git
       tag: v${{package.version}}
-      expected-commit: d8c38c95b66a71134cf86ebfd80e1b2cb819e02f
+      expected-commit: 72cbad0469acffb46a6e76a27e97dd39c1be63ec
+
+  - runs: |
+      # Adjusting PATHs in manpages
+      for i in bin/named/named.rst bin/check/named-checkconf.rst bin/rndc/rndc.rst; do
+        sed -i \
+          -e 's:/etc/named.conf:/etc/bind/named.conf:g' \
+          -e 's:/etc/rndc.conf:/etc/bind/rndc.conf:g' \
+          -e 's:/etc/rndc.key:/etc/bind/rndc.key:g' \
+          "$i"
+      done
 
   - runs: |
       autoreconf -fi
@@ -47,14 +60,20 @@ pipeline:
       opts: |
         --host=${{host.triplet.gnu}} \
         --build=${{host.triplet.gnu}} \
+        --sysconfdir=/etc/bind \
+        --localstatedir=/var \
+        --mandir=/usr/share/man \
+        --infodir=/usr/share/info \
         --with-gssapi=yes \
         --with-libxml2 \
+        --with-json-c \
         --with-openssl=yes \
+        --enable-man \
         --enable-dnstap \
         --enable-largefile \
         --enable-linux-caps \
         --enable-shared \
-        --disable-static
+        --disable-static \
 
   - uses: autoconf/make
     with:
@@ -64,27 +83,14 @@ pipeline:
 
   - runs: |
       # removed -g named -o root
-      install -d -m0770 ${{targets.destdir}}/var/bind \
-        ${{targets.destdir}}/var/bind/sec \
-        ${{targets.destdir}}/var/bind/dyn
+      install -d -m0750 ${{targets.destdir}}/etc/bind ${{targets.destdir}}/var/bind/pri
 
-      # removed -g named -o root
-      install -d -m0750 ${{targets.destdir}}/etc/bind \
-        ${{targets.destdir}}/var/bind/pri
-
-      make -j1 DESTDIR=${{targets.destdir}} install
-
-
-      install -Dm644 named.confd \
-        ${{targets.destdir}}/etc/conf.d/named
-      install -Dm644 named.conf.authoritative \
-        ${{targets.destdir}}/etc/bind/named.conf.authoritative
-      install -Dm644 named.conf.recursive \
-        ${{targets.destdir}}/etc/bind/named.conf.recursive
-      install -Dm644 127.zone \
-        ${{targets.destdir}}/var/bind/pri/127.zone
-      install -Dm644 localhost.zone \
-        ${{targets.destdir}}/var/bind/pri/localhost.zone
+      install -Dm755 named.initd ${{targets.destdir}}/etc/init.d/named
+      install -Dm644 named.confd ${{targets.destdir}}/etc/conf.d/named
+      install -Dm644 named.conf.authoritative ${{targets.destdir}}/etc/bind/named.conf.authoritative
+      install -Dm644 named.conf.recursive ${{targets.destdir}}/etc/bind/named.conf.recursive
+      install -Dm644 127.zone ${{targets.destdir}}/var/bind/pri/127.zone
+      install -Dm644 localhost.zone ${{targets.destdir}}/var/bind/pri/localhost.zone
 
       cd ${{targets.destdir}}/var/bind
       ln -s ../../usr/share/dns-root-hints/named.root named.ca
@@ -143,18 +149,19 @@ subpackages:
   - name: bind-dnssec-root
     pipeline:
       - runs: |
-          _dir="usr/share/dnssec-root"
-          _file="bind-dnssec-root.keys"
-          _link="${{targets.destdir}}/etc/bind.keys"
+          mkdir -p "${{targets.subpkgdir}}/usr/share/dnssec-root"
 
-          mkdir -p "${{targets.subpkgdir}}/$_dir"
-          cd "${{targets.subpkgdir}}/$_dir"
+          # copy the keys file to its final location
+          cp "./bind.keys" "${{targets.subpkgdir}}/usr/share/dnssec-root/bind-dnssec-root.keys"
 
-          mv "$_link" "$_file"
-          ln -s "$_file" bind.keys
-
-          ln -s "../../$_dir/$_file" "$_link"
+          # Create symlink bind.keys in subpackage dnssec-root directory to point to the keys file
+          ln -s /usr/share/dnssec-root/bind-dnssec-root.keys ${{targets.subpkgdir}}/usr/share/dnssec-root/bind.keys
     description: ISC BIND DNSSEC Root Keys
+    test:
+      pipeline:
+        - runs: |
+            test -f /usr/share/dnssec-root/bind-dnssec-root.keys
+            test -L /usr/share/dnssec-root/bind.keys
 
   - name: bind-dnssec-tools
     dependencies:
@@ -240,5 +247,7 @@ subpackages:
 
 update:
   enabled: true
+  ignore-regex-patterns:
+    - ^\d+\.\d*[13579]\.\d+$
   git:
     strip-prefix: v
