Add update configs for the licensee deps.
Signed-off-by: Łukasz 'sil2100' Zemczak <lukasz.zemczak@chainguard.dev>

--- a/ruby3.4-octokit.yaml
+++ b/ruby3.4-octokit.yaml
@@ -43,5 +43,13 @@ pipeline:
 
   - uses: ruby/clean
 
+update:
+  enabled: true
+  github:
+    identifier: octokit/octokit.rb
+    strip-prefix: v
+    use-tag: true
+    tag-filter: v
+
 vars:
   gem: octokit
