--- a/ruby3.4-rugged.yaml
+++ b/ruby3.4-rugged.yaml
@@ -51,5 +51,13 @@ pipeline:
 
   - uses: ruby/clean
 
+update:
+  enabled: true
+  github:
+    identifier: libgit2/rugged
+    strip-prefix: v
+    use-tag: true
+    tag-filter: v
+
 vars:
   gem: rugged
