--- a/ruby3.4-dotenv.yaml
+++ b/ruby3.4-dotenv.yaml
@@ -39,5 +39,13 @@ pipeline:
 
   - uses: ruby/clean
 
+update:
+  enabled: true
+  github:
+    identifier: bkeepers/dotenv
+    strip-prefix: v
+    use-tag: true
+    tag-filter: v
+
 vars:
   gem: dotenv
