--- a/ruby3.4-nokogiri.yaml
+++ b/ruby3.4-nokogiri.yaml
@@ -44,5 +44,13 @@ pipeline:
 
   - uses: ruby/clean
 
+update:
+  enabled: true
+  github:
+    identifier: sparklemotion/nokogiri
+    strip-prefix: v
+    use-tag: true
+    tag-filter: v
+
 vars:
   gem: nokogiri
