--- a/ruby3.4-reverse_markdown.yaml
+++ b/ruby3.4-reverse_markdown.yaml
@@ -42,5 +42,13 @@ pipeline:
 
   - uses: ruby/clean
 
+update:
+  enabled: true
+  github:
+    identifier: xijo/reverse_markdown
+    strip-prefix: v
+    use-tag: true
+    tag-filter: v
+
 vars:
   gem: reverse_markdown
