--- a/ruby3.4-sawyer.yaml
+++ b/ruby3.4-sawyer.yaml
@@ -43,5 +43,13 @@ pipeline:
 
   - uses: ruby/clean
 
+update:
+  enabled: true
+  github:
+    identifier: lostisland/sawyer
+    strip-prefix: v
+    use-tag: true
+    tag-filter: v
+
 vars:
   gem: sawyer
