Do not wait for gnome mirrors when building nokogiri. Fixes problem when wanting to pull in new libxml2.
Signed-off-by: Łukasz 'sil2100' Zemczak <lukasz.zemczak@chainguard.dev>

--- a/ruby3.4-nokogiri.yaml
+++ b/ruby3.4-nokogiri.yaml
@@ -25,6 +25,9 @@ environment:
       - ruby3.4-mini_portile2
       - ruby-3.4
       - ruby-3.4-dev
+  # Upstream also does this in their CI. Otherwise we need to wait for mirrors.
+  environment:
+    NOKOGIRI_USE_CANONICAL_GNOME_SOURCE: t
 
 pipeline:
   - uses: git-checkout
