--- a/pypy.yaml
+++ b/pypy.yaml
@@ -10,18 +10,15 @@ environment:
     packages:
       - autoconf
       - automake
-      - build-base
       - busybox
       - bzip2-dev
-      - clang
+      - build-base
       - expat-dev
-      - gcc-12
-      - gcc-12-default
       - gdbm-dev
       - libffi
       - libffi-dev
-      - libstdc++-6
-      - libstdc++-6-dev
+      - libstdc++
+      - libstdc++
       - linux-headers
       - ncurses-dev
       - openssl-dev>3
@@ -64,10 +61,17 @@ pipeline:
   - uses: autoconf/make-install
     working-directory: python
 
-  - runs: |
+  - uses: git-checkout
+    working-directory: pycparser
+    with:
+      repository: https://github.com/eliben/pycparser.git
+      ## v2.21 is the last version of pycparser with python2.7 compatibility. v2.22 expects python3
+      tag: release_v2.21
+      expected-commit: 3cf6bf5eb16f5eadd4a058e41596145c407a79ad
+  - working-directory: pycparser
+    runs: |
       export LD_LIBRARY_PATH=/home/build/melange-out/pypy/usr/lib:$LD_LIBRARY_PATH
-      /home/build/melange-out/pypy/usr/bin/python -m ensurepip
-      /home/build/melange-out/pypy/usr/bin/python -m pip install pycparser
+      /home/build/melange-out/pypy/usr/bin/python setup.py install
 
   - uses: git-checkout
     with:
