--- a/glib.yaml
+++ b/glib.yaml
@@ -60,6 +60,17 @@ pipeline:
 
   - uses: meson/install
 
+  - name: update shbang
+    runs: |
+      # replace usr/bin/env python3
+      d=${{targets.destdir}}/usr/bin
+      # change '/usr/bin/env python3' or '/usr/bin/python3' to /usr/bin/python3.XX
+      op='1s,^#!/usr/bin/\(env python3\|python3\)$,#!/usr/bin/python${{vars.py-version}},'
+      for f in "$d"/*; do
+         [ -f "$f" ] || continue
+         sed -i -e "$op" "$f";
+      done
+
   - uses: strip
 
 subpackages:
