adding patch file

--- a/pypy.yaml
+++ b/pypy.yaml
@@ -17,8 +17,6 @@ environment:
       - gdbm-dev
       - libffi
       - libffi-dev
-      - libstdc++
-      - libstdc++
       - linux-headers
       - ncurses-dev
       - openssl-dev>3
@@ -82,13 +80,12 @@ pipeline:
 
   - uses: patch
     with:
-      patches: pointer.patch signal.patch pyconfig.patch
+      patches: pointer.patch signal.patch pyconfig.patch sqlite.patch
 
   - runs: |
       cd pypy/goal
       export LD_LIBRARY_PATH=/home/build/melange-out/pypy/usr/lib:$LD_LIBRARY_PATH
       /home/build/melange-out/pypy/usr/bin/python ../../rpython/bin/rpython --opt=jit --shared targetpypystandalone
-      PYTHONPATH=../.. ./pypy-c ../../lib_pypy/pypy_tools/build_cffi_imports.py
 
 update:
   enabled: true
