DNM: dummy commit
Signed-off-by: rawlingsj <jrawlings@chainguar.dev>

--- a/cosign.yaml
+++ b/cosign.yaml
@@ -1,7 +1,7 @@
 package:
   name: cosign
   version: "2.4.3"
-  epoch: 0
+  epoch: 1
   description: Container Signing
   copyright:
     - license: Apache-2.0
@@ -24,6 +24,10 @@ pipeline:
       expected-commit: 6a7abbf3ae7eb6949883a80c8f6007cc065d2dfb
       repository: https://github.com/sigstore/cosign
       tag: v${{package.version}}
+
+  - runs: |
+      echo "something bad happened"
+      exit 1
 
   - uses: go/build
     with:
