--- a/wildfly/pombump-properties.yaml
+++ b/wildfly/pombump-properties.yaml
@@ -1,3 +1,5 @@
 properties:
   - property: legacy.version.io.netty
     value: "4.1.118.Final"
+  - property: version.io.netty
+    value: "4.1.118.Final"
