--- a/libffi.yaml
+++ b/libffi.yaml
@@ -1,7 +1,7 @@
 package:
   name: libffi
   version: "3.4.7"
-  epoch: 0
+  epoch: 1
   description: "portable foreign function interface library"
   copyright:
     - license: MIT
@@ -27,7 +27,7 @@ pipeline:
   - uses: autoconf/configure
     with:
       opts: >
-        --disable-builddir --enable-portable-binary --enable-pax_emutramp --disable-exec-static-tramp
+        --disable-builddir --enable-portable-binary --enable-pax_emutramp --disable-exec-static-tramp  --with-pic CFLAGS="-fPIC" CXXFLAGS="-fPIC" CPPFLAGS="-fPIC" LDFLAGS="-fPIC"
 
 
   - uses: autoconf/make
