--- a/wildfly/pombump-properties.yaml
+++ b/wildfly/pombump-properties.yaml
@@ -3,3 +3,5 @@ properties:
     value: "4.1.118.Final"
   - property: version.io.netty
     value: "4.1.118.Final"
+  - property: version.org.apache.velocity
+    value: "2.4.1"
