trino: fix build exclusion list
Upstream stopped shipping trino-server-rpm in
https://github.com/trinodb/trino/commit/4cf23de9644bed8e238277bd9db2c93f78ecd558
so we don't need to exclude it.

--- a/trino.yaml
+++ b/trino.yaml
@@ -56,7 +56,7 @@ pipeline:
 
       export JAVA_HOME=/usr/lib/jvm/java-23-openjdk
 
-      ./mvnw package -q -DskipTests -Dmaven.source.skip=true -Dair.check.skip-all -T 8  -pl '!:trino-docs,!:trino-server-rpm,!:trino-tests,!:trino-product-tests,!:trino-product-tests-launcher,!:trino-web-ui' -am
+      ./mvnw package -q -DskipTests -Dmaven.source.skip=true -Dair.check.skip-all -T 8  -pl '!:trino-docs,!:trino-tests,!:trino-product-tests,!:trino-product-tests-launcher,!:trino-web-ui' -am
 
       mkdir -p ${{targets.destdir}}/usr/lib/trino
       cp ./core/trino-server/target/trino-server-${{package.version}}/NOTICE ${{targets.destdir}}/usr/lib/trino/
