cronie - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/cronie.yaml
+++ b/cronie.yaml
@@ -27,6 +27,9 @@ pipeline:
       ./autogen.sh
 
   - uses: autoconf/configure
+    with:
+      opts: |
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
