cyrus-sasl - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/cyrus-sasl.yaml
+++ b/cyrus-sasl.yaml
@@ -69,7 +69,8 @@ pipeline:
         --enable-login \
         --enable-auth-sasldb \
         --enable-alwaystrue \
-        --disable-otp
+        --disable-otp \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
