cups - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/cups.yaml
+++ b/cups.yaml
@@ -54,7 +54,8 @@ pipeline:
         --with-dbusdir=/usr/share/dbus-1 \
         --enable-libpaper \
         --with-tls=openssl \
-        --with-optim="$CFLAGS"
+        --with-optim="$CFLAGS" \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
@@ -106,14 +107,14 @@ subpackages:
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
-          mv ${{targets.destdir}}/usr/sbin/cupsaccept ${{targets.subpkgdir}}/usr/bin
-          mv ${{targets.destdir}}/usr/sbin/cupsctl ${{targets.subpkgdir}}/usr/bin
-          mv ${{targets.destdir}}/usr/sbin/cupsdisable ${{targets.subpkgdir}}/usr/bin
-          mv ${{targets.destdir}}/usr/sbin/cupsenable ${{targets.subpkgdir}}/usr/bin
-          mv ${{targets.destdir}}/usr/sbin/lpadmin ${{targets.subpkgdir}}/usr/bin
-          mv ${{targets.destdir}}/usr/sbin/lpc ${{targets.subpkgdir}}/usr/bin
-          mv ${{targets.destdir}}/usr/sbin/lpinfo ${{targets.subpkgdir}}/usr/bin
-          mv ${{targets.destdir}}/usr/sbin/lpmove ${{targets.subpkgdir}}/usr/bin
+          mv ${{targets.destdir}}/usr/bin/cupsaccept ${{targets.subpkgdir}}/usr/bin
+          mv ${{targets.destdir}}/usr/bin/cupsctl ${{targets.subpkgdir}}/usr/bin
+          mv ${{targets.destdir}}/usr/bin/cupsdisable ${{targets.subpkgdir}}/usr/bin
+          mv ${{targets.destdir}}/usr/bin/cupsenable ${{targets.subpkgdir}}/usr/bin
+          mv ${{targets.destdir}}/usr/bin/lpadmin ${{targets.subpkgdir}}/usr/bin
+          mv ${{targets.destdir}}/usr/bin/lpc ${{targets.subpkgdir}}/usr/bin
+          mv ${{targets.destdir}}/usr/bin/lpinfo ${{targets.subpkgdir}}/usr/bin
+          mv ${{targets.destdir}}/usr/bin/lpmove ${{targets.subpkgdir}}/usr/bin
     test:
       pipeline:
         - runs: |
