dmidecode - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/dmidecode.yaml
+++ b/dmidecode.yaml
@@ -35,6 +35,9 @@ pipeline:
       make install DESTDIR=${{targets.destdir}}
       mv ${{targets.destdir}}/usr/local/* ${{targets.destdir}}/usr
       rmdir ${{targets.destdir}}/usr/local
+      mkdir ${{targets.destdir}}/usr/bin
+      mv ${{targets.destdir}}/usr/sbin/* ${{targets.destdir}}/usr/bin
+      rmdir ${{targets.destdir}}/usr/sbin
 
   - uses: strip
 
@@ -44,7 +47,7 @@ subpackages:
     description: programs other than dmidecode built by dmidecode source
     pipeline:
       - runs: |
-          for p in ${{targets.destdir}}/usr/sbin/*; do
+          for p in ${{targets.destdir}}/usr/bin/*; do
             [ -f "$p" ] || continue
             case "$p" in
               */dmidecode) continue;;
