dnsmasq - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/dnsmasq.yaml
+++ b/dnsmasq.yaml
@@ -31,6 +31,9 @@ pipeline:
       mv ${{targets.destdir}}/usr/local/sbin ${{targets.destdir}}/usr/sbin
       mv ${{targets.destdir}}/usr/local/share ${{targets.destdir}}/usr/share
       rmdir ${{targets.destdir}}/usr/local
+      mkdir -p ${{targets.destdir}}/usr/bin
+      mv ${{targets.destdir}}/usr/sbin/* ${{targets.destdir}}/usr/bin
+      rmdir ${{targets.destdir}}/usr/sbin
 
   - uses: strip
 
